Register Screen + RecyclerView to Show users

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".view.InfoActivity"></activity>
-
+        <activity android:name=".view.InfoActivity" />
+        <activity android:name=".view.SelectUserActivity" />
+        <activity android:name=".view.RegisterUserActivity" />
+        <activity android:name=".view.ViewRankingActivity"></activity>
     </application>
 
 </manifest>
