--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".view.PlayGameActivity"></activity>
         <activity android:name=".view.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,7 +20,7 @@
         <activity android:name=".view.InfoActivity" />
         <activity android:name=".view.SelectUserActivity" />
         <activity android:name=".view.RegisterUserActivity" />
-        <activity android:name=".view.ViewRankingActivity"></activity>
+        <activity android:name=".view.ViewRankingActivity" />
     </application>
 
 </manifest>
